<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/square"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:layout_marginBottom="16dp"
            android:textAlignment="textStart"
            android:textColor="@color/internet_color"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/internet_message"
            android:textAlignment="textStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/success"
            android:layout_alignParentEnd="true"
            android:text="@string/okay"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</LinearLayout>
