<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_sales">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rel_relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/gray_shadow"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/amount_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/amount_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/rupee" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/amount"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/amount_rupees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amount_linear_layout"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/_10_000"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/gray_shadow"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/units_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/units_image_view"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:padding="4dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/units"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/number_of_units"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/no_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/units_linear_layout"
                android:gravity="center"
                android:text="@string/five"
                android:textStyle="bold"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_below="@+id/linear1"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/gray_shadow"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/units_linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="29dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/credit_rupees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_10_000"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/credit"
                android:textSize="16sp" />

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/units_linear_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="29dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cash_rupees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_10_000"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cash"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</merge>