<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/material_transit"
                android:paddingStart="2dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <RelativeLayout
                android:id="@+id/rel_relative1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/snippet_date_mat" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout

                    android:id="@+id/rel_relative3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1">

                    <include layout="@layout/snippet_material_centre_litre" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_relative4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1">

                    <include layout="@layout/snippet_fuel_centre_litre_barrel" />

                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rel_relative2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/gray_shadow"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:id="@+id/amount_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/amount_image_view"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:padding="4dp"
                        android:src="@drawable/rupee" />

                    <TextView
                        android:id="@+id/amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/amount"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/amount_rupees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/amount_linear_layout"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/_10_000"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>